# ockam

implementations/elixir/ockam/ockam/lib/ockam/: node.ex  worker.ex
implementations/elixir/ockam/ockam/lib/ockam/identity/: identity.ex
implementations/elixir/ockam/ockam_abac/: mix.exs
implementations/elixir/ockam/ockam_abac/lib/: action_id.ex  attribute_rules.ex  authorization.ex  policy.ex  policy_storage.ex
implementations/elixir/ockam/ockam_abac/lib/attribute_rules/: formatter.ex  parser.ex
implementations/elixir/ockam/ockam_abac/lib/mix/tasks/: compile_rules.ex
implementations/elixir/ockam/ockam_abac/lib/policy_storage/: dets.ex  ets.ex
implementations/elixir/ockam/ockam_abac/priv/: attribute_rules_grammar.peg
implementations/elixir/ockam/ockam_abac/src/: attribute_rules_grammar.erl
implementations/elixir/ockam/ockam_abac/test/: attribute_rules_test.exs  authorization_test.exs
implementations/elixir/ockam/ockam_cloud_node/: mix.exs
implementations/elixir/ockam/ockam_services/: mix.exs
implementations/elixir/ockam/ockam_services/lib/services/api/: abac_policies_api.ex
implementations/rust/ockam/ockam/: Cargo.toml
implementations/rust/ockam/ockam/src/: lib.rs
implementations/rust/ockam/ockam_abac/: Cargo.toml
implementations/rust/ockam/ockam_abac/src/: lib.rs  mem.rs  policy.rs  traits.rs  types.rs
implementations/rust/ockam/ockam_api/: Cargo.toml  schema.cddl
implementations/rust/ockam/ockam_api/src/: auth.rs  authenticator.rs  authority.rs  lib.rs  nodes.rs  session.rs  signer.rs  util.rs
implementations/rust/ockam/ockam_api/src/authenticator/: direct.rs  oauth2.rs
implementations/rust/ockam/ockam_api/src/authenticator/direct/: types.rs
implementations/rust/ockam/ockam_api/src/authenticator/oauth2/: types.rs
implementations/rust/ockam/ockam_api/src/authority/: types.rs
implementations/rust/ockam/ockam_api/src/cloud/: mod.rs  project.rs
implementations/rust/ockam/ockam_api/src/nodes/: authenticators.rs  identity.rs  mod.rs  registry.rs  service.rs
implementations/rust/ockam/ockam_api/src/nodes/models/: forwarder.rs  secure_channel.rs
implementations/rust/ockam/ockam_api/src/nodes/service/: credentials.rs  forwarder.rs  portals.rs  secure_channel.rs
implementations/rust/ockam/ockam_api/src/session/: deps.rs  map.rs  sessions.rs
implementations/rust/ockam/ockam_api/src/signer/: types.rs
implementations/rust/ockam/ockam_channel/: Cargo.toml
implementations/rust/ockam/ockam_command/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_command/src/: authenticated.rs  authenticator.rs  authority.rs  help.rs  lib.rs
implementations/rust/ockam/ockam_command/src/boink/: foo.rs  mod.rs
implementations/rust/ockam/ockam_command/src/forwarder/: create.rs
implementations/rust/ockam/ockam_command/src/identity/: get.rs  mod.rs
implementations/rust/ockam/ockam_command/src/node/: create.rs  util.rs
implementations/rust/ockam/ockam_command/src/project/: addons.rs  enroll.rs  mod.rs  util.rs
implementations/rust/ockam/ockam_command/src/secure_channel/: create.rs  delete.rs  mod.rs
implementations/rust/ockam/ockam_command/src/util/: api.rs  config.rs  mod.rs
implementations/rust/ockam/ockam_command/tests/: cmd_authenticated.rs  commands.bats
implementations/rust/ockam/ockam_core/src/: message.rs
implementations/rust/ockam/ockam_core/src/vault/: types.rs
implementations/rust/ockam/ockam_executor/src/: channel.rs
implementations/rust/ockam/ockam_ffi/: Cargo.toml
implementations/rust/ockam/ockam_getrandom_software/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_getrandom_software/src/: lib.rs
implementations/rust/ockam/ockam_identity/: Cargo.toml
implementations/rust/ockam/ockam_invitations/: Cargo.toml
implementations/rust/ockam/ockam_invitations/src/: ed25519.rs  error.rs  github.rs  identity.rs  lib.rs  ssh.rs
implementations/rust/ockam/ockam_invitations/tests/: github.rs  identity.rs
implementations/rust/ockam/ockam_key_exchange_x3dh/: Cargo.toml
implementations/rust/ockam/ockam_key_exchange_xx/: Cargo.toml
implementations/rust/ockam/ockam_node/src/: context.rs  lib.rs
implementations/rust/ockam/ockam_node/src/relay/: mod.rs
implementations/rust/ockam/ockam_node/src/router/: mod.rs
implementations/rust/ockam/ockam_transport_ble/: Cargo.toml
implementations/rust/ockam/ockam_transport_tcp/src/router/: tcp_router.rs
implementations/rust/ockam/ockam_vault/: Cargo.toml
