[package]
name        = "ockam_api"
version     = "0.6.0"
edition     = "2021"
authors     = ["Ockam Developers"]
license     = "Apache-2.0"
homepage    = "https://github.com/ockam-network/ockam"
repository  = "https://github.com/ockam-network/ockam/implementations/rust/ockam/ockam_api"
description = "Ockam's request-response API"
publish     = true

[features]
std = [
    "minicbor/std",
    "ockam_core/std",
    "ockam_identity/std",
    "ockam_node/std",
    "ockam_vault/std",
    "tinyvec/std",
    "tracing/std"
]
bls           = ["ockam_vault/bls"]
tag           = ["cddl-cat"]
vault-storage = ["ockam_vault/storage"]
lmdb          = ["lmdb-rkv"]

default              = ["authenticators"] # TODO: remove
authenticators       = ["direct-authenticator"]
direct-authenticator = ["lmdb", "std"]

[dependencies]
minicbor        = { version = "0.18.0", features = ["alloc", "derive"] }
ockam           = { path = "../ockam", version = "^0.62.0", features = ["software_vault"] }
ockam_multiaddr = { path = "../ockam_multiaddr", version = "0.2.0", features = ["std"] }
serde           = { version = "1.0.137", features = ["derive"] }
serde_json      = "1.0.81"
tinyvec         = { version = "1.6.0", features = ["rustc_1_57"] }
tracing         = { version = "0.1.34", default-features = false }
# optional dependencies:
cddl-cat        = { version = "0.6.1", optional = true }
lmdb-rkv        = { version = "0.14.0", optional = true }
reqwest         = { version = "0.11.11", optional = true }
url             = { version = "2.2.0", optional = true }

[dependencies.ockam_core]
version          = "0.57.0"
path             = "../ockam_core"
default-features = false
features         = ["no_std", "alloc"]

[dependencies.ockam_node]
version          = "0.60.0"
path             = "../ockam_node"
default-features = false
features         = ["no_std", "alloc"]

[dependencies.ockam_vault]
version          = "0.53.0"
path             = "../ockam_vault"
default-features = false
# FIXME: ockam_vault's dependency curve25519-dalek has non-additive features which
# breaks building ockam_vault with feature set "no_std,std":
features         = ["std"]

[dependencies.ockam_identity]
version          = "0.51.0"
path             = "../ockam_identity"
default-features = false
features         = ["std"]

[dev-dependencies]
cddl-cat            = "0.6.1"
fake                = { version = "2", features=['derive', 'uuid']}
mockall             = "0.11"
# TODO enable "tag" feature once implemented on elixir side
ockam_api           = { path = ".", features = ["std"] }
ockam_macros        = { version = "0.16.0", path = "../ockam_macros", features = ["std"] }
ockam_transport_tcp = { version = "0.58.0", path = "../ockam_transport_tcp" }
quickcheck          = "1.0.1"
tempfile            = "3.3.0"
